test/spec_vectors/func/fail/module_58.wat
(module (func $type-break-num-vs-num (result i32) (br 0 (i64.const 1)) (i32.const 1)))